fix nav counter visibility

--- a/src/screen.css
+++ b/src/screen.css
@@ -374,7 +374,7 @@ h1 #destinationIndex {
         line-height: 6em;
     }
 
-    nav li a::before {
+    nav #wrapperForMobileSidebar li a::before {
         display: none;
     }
 
@@ -463,7 +463,7 @@ h1 #destinationIndex {
         padding: 0 0 0 1.875em;
     }
 
-    nav li a::before {
+    nav #wrapperForMobileSidebar li a::before {
         display: inline-block;
     }
 
